--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,10 @@ authors = ["Indrajith Shetty <indrajitshetty@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pydantic = "*"
+pydantic = "<2.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
